cif/org.eclipse.escet.cif.tests/tests/checks/LocOnlyStaticEvalMarkerPredsCheck.cif.check.err
WARNING: File "checks/LocOnlyStaticEvalMarkerPredsCheck.cif": Semantic warning at line 45, column 34: Location parameter "loc_param.l" is not used anywhere in the specification.
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  --------------------------------------------------------------------------
  (1/2) Location has a marker predicate that cannot be evaluated statically.
  --------------------------------------------------------------------------
   * In location "a.loc6":
     - marked zero() = 0;
                     ^
   * In automaton "nameless_loc":
     - zero() = 0;
              ^
  ---------------------------------------------------------------------------------------------------------------------------
  (2/2) Location has a marker predicate that cannot be evaluated statically, as evaluating it results in an evaluation error.
  ---------------------------------------------------------------------------------------------------------------------------
   * In location "a.loc5":
     - marked 1 / 0 = 1.0;
                ^
   * In automaton "nameless_loc":
     - marked 1 / 0 = 1.0,
                ^
